--- a/examples/go/hello-world/kubefox/hack/environments/qa.yaml
+++ b/examples/go/hello-world/kubefox/hack/environments/qa.yaml
@@ -3,7 +3,7 @@ kind: VirtualEnv
 metadata:
   name: qa
 spec:
-  releasePolicies:
+  releasePolicy:
     appDeploymentPolicy: VersionOptional
     virtualEnvPolicy: SnapshotOptional
 data:
