--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 mkdocs = "==1.5.3"
-mkdocs-material = "==9.4.1" # versions above this screw up the nav
+mkdocs-material = "==9.5.2" # versions above 9.4.1 screw up the nav
 mkdocs-mermaid2-plugin = "==1.1.1"
 mkdocs-awesome-pages-plugin = "==2.9.2"
 
